# Tanks

./: .clang-format  .gitignore  CMakeLists.txt
src/: app.cpp  app.h  appconfig.cpp  appconfig.h  type.h  version_config.h.in
src/app_state/: appstate.h  game.cpp  game.h  menu.cpp  menu.h  scores.cpp  scores.h
src/engine/: engine.cpp  engine.h  renderer.cpp  renderer.h  spriteconfig.cpp  spriteconfig.h
src/objects/: bonus.cpp  bonus.h  brick.cpp  brick.h  bullet.cpp  bullet.h  eagle.cpp  eagle.h  enemy.cpp  enemy.h  object.cpp  object.h  player.cpp  player.h  tank.cpp  tank.h
